--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <h1 class="titulo 1">Sobre o Rodrigo</h1>
     <div class="container">
        <div class="p-30">
-           <p class = "texto1">
+           <p class = "justify">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas perspiciatis laborum culpa? Omnis, quasi? Mollitia non, quibusdam voluptate magnam cumque debitis laudantium perspiciatis natus, odit, optio ratione sit consectetur corporis?
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, incidunt, quibusdam nisi placeat quae hic quia ipsam similique consequuntur ut, architecto ad quod! Hic ut ducimus reprehenderit, iusto soluta nihil!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid inventore ipsum sed ipsa officiis quae, accusantium perspiciatis, ratione suscipit architecto, obcaecati voluptate doloremque doloribus esse qui cupiditate consectetur nulla repellendus!
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos suscipit fugiat vitae unde quis magni nam aut modi nihil natus libero ad nostrum impedit sapiente, deleniti enim amet omnis. A
     </p>
-    <p class="texto1">
+    <p class="justify">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quidem animi quas autem minima dolor exercitationem iste ut nihil perspiciatis? Amet, quisquam accusamus possimus facilis adipisci sit impedit harum in!
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium numquam dolore necessitatibus inventore amet? Saepe facilis maiores distinctio perferendis quas quaerat, optio magnam expedita voluptatibus maxime, voluptate laboriosam? Explicabo, alias.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quaerat placeat aut incidunt voluptate laborum rem iusto optio! Laboriosam ut ipsum inventore animi libero architecto cumque laborum repudiandae dolores neque?
@@ -40,22 +40,32 @@
                 <h2 class="titulo 1">
              Meu filme predileto   
                 </h2>
-                <div class="container">
+                <div class="container mb-50">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/a2GujJZfXpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div> 
-            </div>
-
-            <footer hr>
+                </div> 
+            <hr>
+            <footer>
                 <div class="container">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img class="tm-social p-30" src="nss/imagem/facebook.png" alt="facebook">
+
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img class="tm-social p-30" src="nss/imagem/instagram.png" alt="instagram">
+
+                    </a>
+                    <a href="https://www.whatsapp.com/?lang=pt_br" target="_blank">
+                        <img class="tm-social p-30" src="nss/imagem/whatsapp.png" alt="whatsapp">
+
+                    </a>
 
                 </div>
+
+                
                 <p class="container">
                     Rodrigo Viana&copy;
 
                 </p>
-            </footer>
-                </body>
+            </footer>        
+        </body>
         </html>
