--- a/contato.html
+++ b/contato.html
@@ -5,28 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="nss/css/style.css">
 </head>
 <body>
-    <h1>Entre em contato</h1>
+    <h1 class="titulo">Entre em contato</h1>
 
-    <form class="container">
-        <label for="nome">Nome:</label>
-        <input type="text"id="nome">
-        <br>
-        <label for="email">Email:</label>
-        <input type="email"id="email">
-        <br>
-        <label for="assunto">Nome:</label>
-        <textarea name="assunto" id="assunto" cols="40" rows="20"></textarea>
+    <div class="container">
+        <form>
+            <label for="nome">Nome:</label>
+            <input  type="text" id="nome" onkeyup="validaNome()">
+           <div id="txtNome"></div>
+            <br>
 
-        <button>Enviar</button>
-    </form>
+            <label for="email">Email:</label>
+            <input type="email" id="email" onkeyup="validaEmail()">
+            <div id = "txtEmail"> </div>
 
-    <ul>
+            <br>
+            <label for="assunto">Nome:</label>
+            <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto"></textarea>
+            <div id = "txtAssunto"></div>
+    
+            <button onclick="enviar" >Enviar</button>
+            </form>
+            </div>
+
+            <div class="container ml-50">
+            <h2> Edereço:
+
+            <p>R. Cachoeira Paulista, 1,</p>
+            <p>São Bernardo do Campo - São Paulo</p>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.540647449328!2d-46.58729578501905!3d-23.728092484600428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4150eee747ef%3A0xb388c54a8b7cc51f!2sR.%20Cachoeira%20Paulista%2C%201%20-%20Jardim%20Campestre%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP%2C%2009855-650!5e0!3m2!1spt-BR!2sbr!4v1644592824927!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" onmousemove="mapazoom()" onmouseout="mapanormal()" id="mapa"></iframe>
+
+        </h2>
+
+    </div>
+
+            <ul>
         <li>
             <a class="container" href="index.html">Home</a>
         </li>
     </ul>
+    <hr>
+    <footer>
+        <div class="container">
+            <a href="https://www.facebook.com" target="_blank">
+                <img class="tm-social p-30" src="nss/imagem/facebook.png" alt="facebook">
 
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img class="tm-social p-30" src="nss/imagem/instagram.png" alt="instagram">
+
+            </a>
+            <a href="https://www.whatsapp.com/?lang=pt_br" target="_blank">
+                <img class="tm-social p-30" src="nss/imagem/whatsapp.png" alt="whatsapp">
+
+            </a>
+
+        </div>
+
+        
+        <p class="container">
+            Rodrigo Viana&copy;
+
+        </p>
+    </footer>
+    <script src="nss/javascript/script.js"></script>
 </body>
 </html>
